# archivesspace-to-folio

./: .gitignore  README.MD  config.yaml.example  pyproject.toml  requirements.txt
archivesspace_to_folio/: __main__.py  aspace.py  config.py  folio.py  sync.py  utils.py
src/archivesspace_to_folio/: __main__.py  aspace.py  config.py  field_functions.py  folio.py  sync.py  utils.py
