[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archivesspace-to-folio"
version = "0.1.0"
description = "Sync ArchivesSpace containers into FOLIO inventory as requestable items"
requires-python = ">=3.10"
dependencies = [
    "folioclient",
    "ArchivesSnake",
    "pyyaml",
]

[project.scripts]
archivesspace-to-folio = "archivesspace_to_folio.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
